--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DoctorAppointmentManagementContext": "Host=aws-0-ap-south-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.gbloyubmfagsveqsxblt;Password=Tawhid@3123"
+    "DoctorAppointmentManagementContext": 
   }
 
 }
